# blackhole

./: .gitignore  .gitmodules  .shippable.yml  .travis.yml  01ab68209a0c4550dbe2b5e419258a08eeee4ff7-25955ae319e5797568a6366476d0668c20f24eba.html  0799f7659a35e6efd930db880606e91315c52f4f-60578d65c962b26acdcac265bb1d821ea845b776.html  2eb24a79cfadf88c0782255399d056aedb1a219e-d2066853fdea6a620fde2fab0a19786e8ee5fc04.html  31fc650e12ffaebc16647e32b6b841009da22da6-91db5d154c8278afc1c9dc333bab07176d5aae0f.html  4f63cf6225519f37441e9fbd9c795341d66fd793-f3ec58b948bdeeddd25e780534b5071e747f49c3.html  794a17ca34c7d5ed8db8895d19880216b8a422de-73e2c9a5693c6cfcf9e9e9b1015184ea16da91d9.html  7c513f43c33ebc1068a0abb480c1acd2931d7398-282df1d17c5837a197b9fbc510e8346c59c83c58.html  CHANGELOG.md  CMakeLists.txt  Dockerfile  Factory.RFC.md  LICENSE  README.md  b17eb9711dec646abd2fe83d4dd080c1c7e72e67-9c57ef424f097546c8a13558c659c299b07510fa.html  blackhole-bf.spec  config.hpp.in  d2066853fdea6a620fde2fab0a19786e8ee5fc04-04cfc171f074c480b4e82a608fe9a0c518316387.html  e85def140c135ad0cb3dbdd71519b9d8bfbeccd5-794a17ca34c7d5ed8db8895d19880216b8a422de.html  f3ec58b948bdeeddd25e780534b5071e747f49c3-d605892d8c79279cd4108cbc33acf22b96f6fe0f.html  libblackhole1.version  main.cpp  shippable.yml
src/: CMakeLists.txt  attribute.cpp  datetime.hpp  essentials.cpp  essentials.hpp  format.cpp  handler.cpp  keeper.cpp  log.cpp  logger.cpp  procname.cpp  procname.hpp  record.cpp  record.hpp  recordbuf.hpp  registry.cpp  root.cpp  scoped.cpp  spinlock.hpp  spinlock.linux.hpp  spinlock.osx.hpp  termcolor.cpp  wrapper.cpp
src/benchmark/: CMakeLists.txt  String.cpp  attribute_set.cpp  experimental.cpp  main.cpp  util.hpp
src/benchmark/detail/: datetime.cpp
src/benchmark/formatter/: string.cpp
src/benchmark/logger/: batch.cpp  logger.cpp  thread.cpp
src/benchmark/performance/: CMakeLists.txt  main.cpp
src/benchmark/vsboost/: CMakeLists.txt  main.cpp
src/blackhole/: CMakeLists.txt  attribute.hpp  bigbang.hpp  blackhole.hpp  common.hpp  config.hpp  dynamic.hpp  error.hpp  expression.hpp  factory.hpp  filter.hpp  forwards.hpp  frontend.hpp  helper.hpp  initialization.hpp  keyword.hpp  log.cpp  log.hpp  logger.hpp  logger.ipp  macro.hpp  platform.hpp  record.hpp  repository.hpp  scoped_attributes.hpp  storage.hpp  synchronized.hpp  trace.hpp  universe.hpp
src/blackhole/attribute/: name.hpp  scope.hpp  set.hpp  traits.hpp  value.hpp  view.hpp
src/blackhole/defaults/: severity.hpp
src/blackhole/detail/: array.hpp  concept.hpp  datetime.hpp  syntax.hpp
src/blackhole/error/: handler.hpp
src/blackhole/expression/: helper.hpp
src/blackhole/formatter/: base.hpp  json.hpp  mapping.hpp  msgpack.hpp  string.hpp
src/blackhole/frontend/: files.hpp  syslog.hpp
src/blackhole/implementation/: logger.ipp
src/blackhole/keyword/: message.hpp  process.hpp  severity.hpp  thread.hpp  timestamp.hpp  tracebit.hpp
src/blackhole/logger/: mod.hpp  wrapper.hpp
src/blackhole/platform/: compiler.hpp  deprecated.hpp  initializer_list.hpp  random.hpp  underlying.hpp
src/blackhole/repository/: factory.hpp  registrator.hpp
src/blackhole/sink/: elasticsearch.hpp  files.hpp  null.hpp  socket.hpp  stream.hpp  syslog.hpp  thread.hpp
src/blackhole/trace/: callable.hpp  context.hpp  distribution.hpp  forwards.hpp  random.hpp  span.hpp  state.hpp
src/blackhole/utils/: atomic.hpp  format.hpp  lazy.hpp  meta.hpp  noexcept.hpp  noncopyable.hpp  nullptr.hpp  split.hpp  thread.hpp  timeval.hpp  types.hpp  underlying.hpp  unique.hpp  unused.hpp
src/config/: factory.cpp  factory.hpp  json.cpp  json.hpp  monadic.cpp  node.cpp  none.cpp  option.cpp
src/datetime/: generator.linux.cpp  generator.linux.hpp  generator.other.cpp  generator.other.hpp  stream.hpp
src/examples/: CMakeLists.txt
src/examples/default/: CMakeLists.txt  main.cpp
src/examples/elasticsearch/: CMakeLists.txt  main.cpp
src/examples/files/: CMakeLists.txt  main.cpp
src/examples/init-from-file/: CMakeLists.txt  config.json  main.cpp
src/examples/logstash/: CMakeLists.txt  main.cpp
src/examples/simple/: CMakeLists.txt  main.cpp
src/examples/syslog/: CMakeLists.txt  main.cpp
src/examples/trivial/: CMakeLists.txt  main.cpp
src/filter/: severity.cpp  zen.hpp
src/formatter/: json.cpp  json.hpp  mod.cpp  string.cpp  tskv.cpp
src/formatter/string/: error.cpp  error.hpp  grammar.cpp  grammar.hpp  grammar.inl.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/hack/: addressof.hpp
src/handler/: blocking.cpp  blocking.hpp  dev.cpp  dev.hpp
src/scope/: holder.cpp  manager.cpp  watcher.cpp
src/sink/: asynchronous.cpp  asynchronous.hpp  asynchronous.p.cpp  console.cpp  console.hpp  file.cpp  file.hpp  null.cpp  syslog.cpp
src/sink/file/: flusher.hpp  rotate.hpp
src/sink/socket/: tcp.cpp  tcp.hpp  udp.cpp  udp.hpp
src/tests/: CMakeLists.txt  Dynamic.cpp  Global.hpp  Mocks.hpp  Record.cpp  Repository.cpp  TcpSink.cpp  Trace.cpp  UdpSink.cpp  View.cpp  Wrapper.cpp  global.hpp  main.cpp  mocks.hpp  stringng.cpp  test_AttachableStream.cpp  test_Attribute.cpp  test_AttributesGuard.cpp  test_Config.cpp  test_ConfigJsonInitialization.cpp  test_ExceptionTrap.cpp  test_FactoryInitialization.cpp  test_FileBackend.cpp  test_FileRotation.cpp  test_FileRotationDateTimeWatcher.cpp  test_FileRotationNaming.cpp  test_FileRotationSizeWatcher.cpp  test_FileRotationWatcher.cpp  test_FileSink.cpp  test_Filter.cpp  test_Functional.cpp  test_JsonFormatter.cpp  test_Keyword.cpp  test_Logger.cpp  test_LoggerSynchronized.cpp  test_Macro.cpp  test_Manual.cpp  test_MsgpackFormatter.cpp  test_NullSink.cpp  test_ScopedAttributes.cpp  (+8 more)
src/tests/attribute/: combined.cpp
src/tests/concept/: logger.cpp
src/tests/config/: no-valid-absent-formatter.json  no-valid-absent-sink.json  valid-multiple-frontends.json  valid.json
src/tests/datetime/: common.hpp  test_DayOfMonth.cpp  test_DayOfWeek.cpp  test_DayOfYear.cpp  test_Month.cpp  test_Other.cpp  test_Time.cpp  test_Week.cpp  test_Year.cpp
src/tests/extra/: ElasticsearchSink.cpp  (+10 more)
src/util/: optional.hpp  time.hpp
(+418 files in other folders)
