CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(src)

IF(ENABLE_TESTING)
    IF("${GOOGLE_MOCK_SOURCE_DIR}" STREQUAL "" OR NOT EXISTS "${GOOGLE_MOCK_SOURCE_DIR}/CMakeLists.txt")
        MESSAGE("Unit testing is disabled")
    ELSE()
        ADD_SUBDIRECTORY(tests)
    ENDIF()
ENDIF()

IF(ENABLE_BENCHMARKING)
    ADD_SUBDIRECTORY(benchmark)
ENDIF()

IF(ENABLE_EXAMPLES)
    ADD_SUBDIRECTORY(examples)
ENDIF()

INSTALL(
    DIRECTORY
        blackhole/
    DESTINATION include/blackhole
    COMPONENT development
)
