CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(src)

IF(ENABLE_TESTING)
    ADD_SUBDIRECTORY(tests)
ENDIF()

IF(ENABLE_BENCHMARKING)
    ADD_SUBDIRECTORY(benchmark)
ENDIF()

IF(ENABLE_EXAMPLES)
    ADD_SUBDIRECTORY(examples)
ENDIF()

INSTALL(
    DIRECTORY
        blackhole/
    DESTINATION include/blackhole
    COMPONENT development
)
