CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_BUILD_TYPE "Debug")

SET(PROJECT blackhole)

file(GLOB_RECURSE HEADERS . *.hpp)

SET(SOURCES
    log.cpp
)

SET(BOOST_COMPONENTS
)

PROJECT($PROJECT)

FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)

INCLUDE_DIRECTORIES(.)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)

ADD_LIBRARY(${PROJECT} SHARED
    ${HEADERS}
    ${SOURCES}
)

TARGET_LINK_LIBRARIES(${PROJECT}
    ${CMAKE_THREAD_LIBS_INIT}
    ${Boost_LIBRARIES}
)

SET_TARGET_PROPERTIES(${PROJECT} PROPERTIES ENABLE_EXPORTS true)
ADD_DEFINITIONS(-std=c++0x)

