CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(blackhole-examples)

# It's required to FIND_PACKAGE(Threads) to use CMAKE_THREAD_LIBS_INIT
FIND_PACKAGE (Threads REQUIRED)
INCLUDE_DIRECTORIES (${Threads_INCLUDE_DIR})

ADD_SUBDIRECTORY(trivial)
ADD_SUBDIRECTORY(simple)
ADD_SUBDIRECTORY(files)
ADD_SUBDIRECTORY(syslog)
ADD_SUBDIRECTORY(logstash)
ADD_SUBDIRECTORY(init-from-file)
ADD_SUBDIRECTORY(elasticsearch)
