CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_BUILD_TYPE "Debug")

SET(PROJECT blackhole-example-elasticsearch)

ADD_DEFINITIONS(-DURDL_HEADER_ONLY=1)
ADD_DEFINITIONS(-DURDL_DISABLE_SSL=1)

SET(HEADERS
)

SET(SOURCES
    main
)

SET(Boost_USE_MULTITHREADED ON)

SET(BOOST_COMPONENTS
    system
    thread
    filesystem
)

PROJECT(${PROJECT})

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/src
    SYSTEM ${CMAKE_SOURCE_DIR}/foreign/rapidjson/include
    SYSTEM ${CMAKE_SOURCE_DIR}/foreign/urdl/include
)

FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)

ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT}
    ${CMAKE_THREAD_LIBS_INIT}
    ${Boost_LIBRARIES}
)

ADD_DEFINITIONS(-std=c++0x)
